horizontal scrolling fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ body {
   color: #333;
   padding-bottom: 0;
   margin-bottom: 0;
+  overflow: hidden;
 }
 .hero-unit {
   margin: 50px auto 0;
@@ -44,6 +45,7 @@ h1 {
       height: 40px!important;
     }
 
+
 }
 
 
@@ -67,16 +69,17 @@ ul.menu {
 }
 
 ul {
-  list-style-position: outside!important;
+  list-style-position: inside!important;
 }
 .toplogo {
   float: left;
   height: 30px;
   width: 30px;
-  padding-right: 0;
+  padding-right: 0px;
   padding-top: 2px;
   fill: $primary-color;
 }
+
 svg.toplogo {
   fill: $primary-color;
   height: 60px;
@@ -86,9 +89,9 @@ svg.toplogo {
 .top-bar,
 .top-bar ul {
   background-color: #FFF;
+  box-sizing: 0px;
 }
 .logo-text {
-  width: 1200px;
   color: $primary-color;
   padding-left: 5px;
   font-weight: 700;
